--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -45,4 +48,8 @@
         android:name="com.example.neosoftassignmentproject.HomeFragment"
         android:label="fragment_home2"
         tools:layout="@layout/fragment_home2" />
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="com.example.neosoftassignmentproject.views.ForgotPasswordFragment"
+        android:label="ForgotPasswordFragment" />
 </navigation>
