--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -22,8 +22,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <fragment
-            android:id="@+id/fragment2"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/home_container_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
