--- a/app/src/main/res/layout/fragment_add_address.xml
+++ b/app/src/main/res/layout/fragment_add_address.xml
@@ -8,7 +8,7 @@
             name="viewModel"
             type="com.example.neosoftassignmentproject.viewmodels.AddAdressViewModel" />
     </data>
-<androidx.core.widget.NestedScrollView
+<ScrollView
     android:layout_width="match_parent"
     android:background="@color/grey"
     android:layout_height="match_parent">
@@ -38,7 +38,7 @@
             android:background="@drawable/btn_bg"
             android:layout_height="wrap_content"
             android:minHeight="120dp"
-
+            android:imeOptions="actionNext"
             android:textColor="#333333"
             android:gravity="start"
             android:fontFamily="@font/gotham_book"
@@ -74,6 +74,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:text="@={viewModel.landmark}"
             android:inputType="text"
             android:textColor="#333333"
@@ -119,7 +120,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/btn_bg"
             android:text="@={viewModel.city}"
-
+            android:imeOptions="actionNext"
             android:ems="10"
             android:fontFamily="@font/gotham_book"
             android:inputType="text"
@@ -135,7 +136,7 @@
             android:background="@drawable/btn_bg"
             android:ems="10"
             android:text="@={viewModel.state}"
-
+            android:imeOptions="actionNext"
             android:fontFamily="@font/gotham_book"
             android:inputType="text"
             android:textColor="#333333"
@@ -164,7 +165,7 @@
             android:background="@drawable/btn_bg"
             android:ems="10"
             android:text="@={viewModel.zip_code}"
-
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:minHeight="50dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -190,7 +191,7 @@
             android:background="@drawable/btn_bg"
             android:ems="10"
             android:text="@={viewModel.country}"
-
+            android:imeOptions="actionDone"
             android:fontFamily="@font/gotham_book"
             android:inputType="text"
             android:minHeight="50dp"
@@ -212,5 +213,5 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+</ScrollView>
 </layout>
