--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,140 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rltTop"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+
+
 <RelativeLayout
-    android:visibility="gone"
     android:id="@+id/rlt"
     android:layout_width="match_parent"
-    android:layout_height="686px">
-
-
-</RelativeLayout>
-
-
-    <LinearLayout
-        android:visibility="gone"
-        android:layout_below="@id/rlt"
-        android:id="@+id/lnr"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:gravity="center_vertical|center_horizontal"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
-
-
-
-    <LinearLayout
-        android:visibility="gone"
-        android:layout_below="@id/rlt"
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-
-        android:layout_marginStart="40px"
-        android:layout_marginEnd="40px"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/table_img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/tableicon"></ImageView>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/sofa_img"
-                android:layout_width="match_parent"
-
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/sofaicon"></ImageView>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:visibility="gone"
-        android:layout_below="@id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_marginTop="15px"
-        android:layout_marginEnd="40px"
-        android:layout_marginStart="40px"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-
-        <androidx.cardview.widget.CardView
-
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/chair_img"
-                android:layout_margin="10dp"
-
-                android:src="@drawable/chairsicon"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></ImageView>
-
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-
-
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-            <ImageView
-                android:id="@+id/cupboard_img"
-                android:layout_margin="10dp"
-
-                android:src="@drawable/cupboardicon"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></ImageView>
-
-
-        </androidx.cardview.widget.CardView>
-
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@id/viewPager"
-        android:id="@+id/rv_product"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:layout_width="match_parent"
-        app:spanCount="2"
-        android:layout_height="match_parent" />
-
+    android:layout_height="wrap_content">
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
@@ -148,6 +23,35 @@
 
 
     </androidx.viewpager2.widget.ViewPager2>
+
+    <LinearLayout
+
+        android:layout_marginTop="670px"
+        android:id="@+id/lnr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+
+</RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/rlt"
+        android:id="@+id/rv_product"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:layout_width="match_parent"
+        app:spanCount="2"
+        android:layout_height="match_parent" />
+
+
+
+
+
+
+
 
 
 </RelativeLayout>
