--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/user_name"
+                android:id="@+id/email_edttxt"
                 android:inputType="textEmailAddress"
                 android:text="@={ViewModel.email}"
                 android:textSize="54px" />
