--- a/app/src/main/res/layout/address_item.xml
+++ b/app/src/main/res/layout/address_item.xml
@@ -10,18 +10,19 @@
     </data>
 
     <RelativeLayout
-        android:layout_margin="20px"
 
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="256px">
 
         <RadioButton
-
+            android:gravity="center_horizontal|center_vertical"
             android:layout_centerVertical="true"
             android:id="@+id/radioButton"
             android:buttonTint="@color/black"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
+
             android:layout_height="wrap_content"
             />
 
@@ -29,32 +30,33 @@
             android:id="@+id/relative_lt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-18dp"
+
             android:layout_toRightOf="@id/radioButton"
             android:background="@drawable/un_selected_address_bg"
             android:minHeight="256px">
 
             <TextView
                 android:id="@+id/address_txt"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="2dp"
+                android:layout_width="wrap_content"
+
+                android:layout_toLeftOf="@id/remove_img"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/remove_img"
+               android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:fontFamily="@font/gotham_book"
-                android:padding="5dp"
-                android:text="@{model._address}"
+                android:padding="15dp"
+                android:text="@{model._address, default = address}"
                 android:textColor="#333333"
                 android:textSize="45px"></TextView>
 
             <ImageView
                 android:id="@+id/remove_img"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_alignParentEnd="true"
 
                 android:layout_alignParentRight="true"
-                android:padding="8dp"
+                android:layout_margin="2dp"
                 android:src="@drawable/remove_button"></ImageView>
 
         </RelativeLayout>
